--- a/todo/pubspec.yaml
+++ b/todo/pubspec.yaml
@@ -19,11 +19,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  hive: ^1.0.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
 
 dev_dependencies:
+  hive_generator: 0.5.2
+  build_runner: 1.7.1
   flutter_test:
     sdk: flutter
 
